Bug 256720 - [macOS] Safari occasionally hangs when right clicking an image
Summary: [macOS] Safari occasionally hangs when right clicking an image
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Aditya Keerthi
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-12 10:36 PDT by Aditya Keerthi
Modified: 2023-05-12 14:14 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aditya Keerthi 2023-05-12 10:36:06 PDT
rdar://108912950
Comment 1 Aditya Keerthi 2023-05-12 10:47:45 PDT
Pull request: https://github.com/WebKit/WebKit/pull/13817
Comment 2 EWS 2023-05-12 14:14:15 PDT
Committed 264025@main (1b8516049c49): <https://commits.webkit.org/264025@main>

Reviewed commits have been landed. Closing PR #13817 and removing active labels.