[macOS] Safari occasionally hangs when right clicking an image https://bugs.webkit.org/show_bug.cgi?id=256720 rdar://108912950

Reviewed by Wenson Hsieh.

WebKit performs QR code detection on behalf of Safari when right clicking an
image. `-[VNImageRequestHandler performRequests:error:]` is used to perform
detection. While each request has a completion handler, the call to perform
requests is actually synchronous. Since context menu presentation is already
asynchronous, WebKit can and should perform detection on a background thread to
avoid hangs.

Covered by existing API tests in ContextMenuTests.

* Source/WebKit/Platform/cocoa/ImageAnalysisUtilities.mm:
(WebKit::requestPayloadForQRCode):

Perform QR code detection on a `WorkQueue`.

Canonical link: https://commits.webkit.org/264025@main